force-app/main/default/objects/Method_price_list__c/Method_price_list__c.object-meta.xml
<CustomObject>
    <label>Brand price list</label>
    <nameField>
        <displayFormat>Method-{0000}</displayFormat>
        <label>Brand price list name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand price list</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>