force-app/main/default/objects/Method_price_list__c/fields/Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Arrangement__c</fullName>
    <label>Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrangement</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Methode licentie</fullName>
            </value>
            <value>
                <fullName>On-line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>