force-app/main/default/objects/Method_price_list__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Brand</label>
    <referenceTo>Method__c</referenceTo>
    <relationshipLabel>Brand price list</relationshipLabel>
    <relationshipName>Method_price_list</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>