force-app/main/default/objects/Method_price_list__c/fields/TargetStream__c.field-meta.xml
<CustomField>
    <fullName>TargetStream__c</fullName>
    <label>Target Stream</label>
    <length>255</length>
    <type>Text</type>
</CustomField>